# cft-analysis

./: .bumpversion.toml  .doit.db  .gitignore  CITATION.cff  README.md  _tasks.py  dodo.py  pyproject.toml
.github/workflows/: lint.yml
cft_analysis/: __init__.py  _types.py  io.py
cft_analysis/datasets/: __init__.py  _cft_dataset_processed.py  _cft_dataset_raw.py  cft_dataset.py  helper.py
cft_analysis/feature_extraction/: __init__.py  cft.py  hrv.py
cft_analysis/utils/: __init__.py  data_reshaping.py
experiments/2021_scientific_reports/data/ecg/: cft_hr_ensemble.xlsx  cft_hr_features_merged.csv
experiments/2021_scientific_reports/data/for_analysis/: cft_hr_ensemble.xlsx  cft_hr_mean_normalized.csv  cft_measures_merged.csv  cft_parameter.csv  cortisol_features.csv  cortisol_samples.csv  questionnaire_data.csv
experiments/2021_scientific_reports/data/saliva/: cortisol_features.csv
experiments/2021_scientific_reports/notebooks/analysis/: Demographics.ipynb  ECG_Analysis.ipynb  Heart_Rate_Analysis.ipynb  Questionnaire_Analysis.ipynb  Saliva_Analysis.ipynb  Subject_Exclusion.ipynb
experiments/2021_scientific_reports/notebooks/data_processing/: CFT_Feature_Computation.ipynb  ECG_Processing_Feature_Computation.ipynb  HRV_Feature_Merging.ipynb  Questionnaire_Processing.ipynb  Saliva_Processing.ipynb
experiments/2021_scientific_reports/notebooks/plotting/: Heart_Rate_Plots.ipynb  Saliva_Plots.ipynb
experiments/2021_scientific_reports/results/: age_bmi.csv  cft_data_age_bmi.csv  gender_count.csv  gender_count_no_exclusion.csv  hr_increase_mist.csv
experiments/2021_scientific_reports/results/statistics/: stats_bmi_age.xlsx  stats_cortisol_features.xlsx  stats_cortisol_interaction.xlsx  stats_cortisol_response_mist.xlsx  stats_effect_cft_interaction.xlsx  stats_hr_response_bl_cfi.xlsx  stats_hr_response_cft_increase_bl_cfi.xlsx  stats_hr_response_mist_increase_bl_at.xlsx  stats_hr_response_mist_increase_mist_phases.xlsx  stats_hrv_response_mist_phases.xlsx  stats_questionnaire_mdbf_interaction.xlsx  stats_questionnaire_mdbf_pre_post.xlsx  stats_questionnaire_pss.xlsx
experiments/2022_scientific_reports/data/: excluded_subjects.csv  mist_cft.json
experiments/2022_scientific_reports/data/ecg/: cft_parameter.csv
experiments/2022_scientific_reports/data/questionnaire/: codebook.csv  questionnaire_data.csv
experiments/2022_scientific_reports/data/saliva/: cortisol_samples.csv
experiments/2022_scientific_reports/notebooks/: paper_path.json
experiments/2022_scientific_reports/results/: age_bmi_no_exclusion.csv  questionnaire_mdbf_decrease.csv
experiments/2023_ispne/notebooks/: CFT_Latency_Analysis.ipynb  CFT_Latency_Example.ipynb  CFT_Latency_Plot_Poster.ipynb  Heart_Rate_Plots_Poster.ipynb  Saliva_Plots_Poster.ipynb
experiments/2025_dissertation_presentation/notebooks/: CFT_Example.ipynb  Heart_Rate_Plots.ipynb  Saliva_Plots_Poster.ipynb
(+58 files in other folders)
