[project]
name = "cft-analysis"
version = "1.2.1"
description = "Package for the analysis of Cold Face Test Data."
authors = [
    { name = "Robert Richer", email = "robert.richer@fau.de" },
    { name = "Janis Zenkner", email = "janis.zenkner@fau.de" },
    { name = "Arne Kuederle", email = "arne.kuederle@fau.de" },
]
requires-python = ">=3.8,<=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "biopsykit[jupyter]>=0.6,<0.7",
    "tpcp>=0.9.0,<0.10",
    "fau-colors>=1.7.0,<2",
    "seaborn>=0.11.2,<0.12",
]

[project.urls]
Homepage = "https://github.com/mad-lab-fau/cft-analysis"
Repository = "https://github.com/mad-lab-fau/cft-analysis"

[dependency-groups]
dev = [
    "poethepoet>=0.11.0,<0.12",
    "pytest>=6.2.5,<7",
    "pytest-cov>=3.0.0,<4",
    "coverage~=6.2",
    "black[d, jupyter]>=22,<23",
    "isort>=5.10.1,<6",
    "prospector>=1.2.0,<2",
    "ipykernel>=6.4.1,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true

[tool.poe.tasks]
_black = "black ."
_black_check = "black . --check"
_isort = "isort **/*.py"
_isort_check = "isort **/*.py --check-only"

# Reformat all files using black and sort import
format = ["_black", "_isort"]
format_check = ["_black_check", "_isort_check"]
lint = "prospector"
test = "pytest --cov=cft-analysis --cov-report=xml"
docs = {"script" = "_tasks:task_docs"}
update_version = {"script" = "_tasks:task_update_version"}
register_ipykernel = "python -m ipykernel install --user --name cft-analysis --display-name cft-analysis"
default = ["format", "lint", "test"]
